--- a/Evanston_Divvy_Bike_Analysis.Rmd
+++ b/Evanston_Divvy_Bike_Analysis.Rmd
@@ -506,7 +506,7 @@ The intriguing finding from the last graph suggests that in colder months, there
 
 ##Further Directions
 
-A future analysis should consider the question of why certain trip paths are traveled more frequency. This might be partially explained by ease of travel, such as bike lanes, and it would be interesting to compare the locations of bike lanes with popular Divvy routes.
+A future analysis should consider the question of why certain trip paths are traveled more frequently. This might be partially explained by ease of travel, such as bike lanes, and it would be valuable to compare the locations of bike lanes with popular Divvy routes.
 
 # References and Resources
 
