--- a/Evanston_Divvy_Bike_Analysis.Rmd
+++ b/Evanston_Divvy_Bike_Analysis.Rmd
@@ -426,7 +426,7 @@ Plot 3.1: Box and whisker plot showing the average ride duration per month of di
 #age vs. trip length in each month
 Plot3.1 <- Divvy_df %>% drop_na() %>% mutate(age = 2019 - birthyear) %>% 
   mutate(agegroup = findInterval(age, c(10,20,30,40,50,60))) %>% 
-  mutate(agegroup = recode_factor(agegroup,`1` = '>20 Years Old',`2` = '20s',
+  mutate(agegroup = recode_factor(agegroup,`1` = '<20 Years Old',`2` = '20s',
                                   `3`='30s',`4`='40s',`5`='50s',`6`='60s')) %>%  
   ggplot(aes(x=Month,y=duration)) + stat_boxplot(fill="orange", alpha=0.4) + 
   facet_wrap(~agegroup) + theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
